--- a/Scrap_BS_Notebook.ipynb
+++ b/Scrap_BS_Notebook.ipynb
@@ -106,8 +106,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we will print the contents in the console. This will print the entire HTML of the page in a readable way:"
+    "Now, you could print the contents in the console, obtaining the entire HTML content of the page in a readable way"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -20020,7 +20027,7 @@
     }
    ],
    "source": [
-    "print(soup.prettify())"
+    "#print(soup.prettify())"
    ]
   },
   {
