--- a/Scrap_BS_Notebook.ipynb
+++ b/Scrap_BS_Notebook.ipynb
@@ -557,7 +557,7 @@
    "metadata": {},
    "source": [
     "### URLS\n",
-    "Now we are goinf to get a list of all the urls cited at the reference section of the website.\n",
+    "Now we are going to get a list of all the urls cited at the reference section of the website.\n",
     "1. We use the find.all() function to get all the elements in the reflist class\n",
     "2. With a loop, we search into the elements to find the url of each one, through the use of the attribute \"href\"\n",
     "3. We print the elements that fill the condition of starting with http\n"
